# dediscover

./: README.md  build.gradle  settings.gradle
ded-cpp/: CMakeLists.txt  build-subdir.sh  build.gradle  run-cmake.sh  xde-config.cmake
ded-cpp/SplineLib/: CMakeLists.txt
ded-cpp/SplineLib/src/: CMakeLists.txt
ded-cpp/SplineLib/src/baf/: basis_function.cc  knot_vector.h
ded-cpp/f90/: CMakeLists.txt
ded-cpp/f90/src/: dde_solver_bind.f90  goldenpara.f90  sfmin.f90  spline.f90  trust_region.f90
ded-cpp/muparser/: CMakeLists.txt
ded-cpp/testing/examples/: AdrianDE_ex.cc  BoostSpline_ex.cc  CMakeLists.txt  ConfidenceInterval_ex.cc  DualInfection_ex.cc  MuParser_ex.cc  SambineDDE_ex.cc  Sundials_Caulo_ex.cc  Sundials_predator_prey_ex.cc  TrustRegion_ex.cc
ded-cpp/testing/xde-tests/: CMakeLists.txt
ded-cpp/testing/xde-tests/algorithms/: CMakeLists.txt  GeneralParameterTest.cc  ParameterValueTest.cc  XDEAlgorithmTest.cc
ded-cpp/testing/xde-tests/base/: AssertMacrosTest.cc  CMakeLists.txt  MemoryBankTest.cc
ded-cpp/testing/xde-tests/expressions/: DelayedVariableTest.cc  ExpressionEvaluatorTest.cc  MemorySynchronizerTest.cc  MuParserExpressionHandlerTest.cc  MuParserTest.cc
ded-cpp/testing/xde-tests/fortran/: DDESolverTest.cc  ToTestFortranSpline-2.cc  ToTestFortranSpline.cc  ToTestFortranTrustRegion.cc  big-data.csv  data.txt
ded-cpp/testing/xde-tests/mapping/: DataTableMappingTest.cc
ded-cpp/testing/xde-tests/model/: ComputeModelTest.cc  HistoryStatementTest.cc  InitialConditionsTest.cc  ModelTest.cc  TVFInModelTest.cc  ValidateFormulaTest.cc
ded-cpp/testing/xde-tests/optimizer/: AdrianDETest.cc
ded-cpp/testing/xde-tests/parser/: ComputationFromParserTest.cc  DelayedVariablesHandlerTest.cc  HistoryIntervalsTest.cc  ParserErrorTest.cc  SpiritParserTest.cc  UserDefinedFunctionsTest.cc  XDEParserTest.cc
ded-cpp/testing/xde-tests/solver/: SambineSolverTest.cc  SolverFactoryTest.cc
ded-cpp/testing/xde-tests/statistics/: MathUtilsTest.cc  NLSSummaryTest.cc  TestCIFactory.cc
ded-cpp/testing/xde-tests/test-utils/: TestUtils.h  XDETestUtils.cc  doctest.h
ded-cpp/testing/xde-tests/time_varying/: BoostSplineTest.cc  TestBasicTimeVarying.cc  TestTVFunctionMapping.cc  ToTestFortranXDESpline.cc  ToTestPrecomputedSpline.cc
ded-cpp/xde/: CMakeLists.txt
ded-cpp/xde/algorithms/: AlgorithmTemplates.cc  AlgorithmTemplates.h  CMakeLists.txt  ConcreteParameters.h  GeneralParameter.cc  GeneralParameter.h  GenericParameter.cc  GenericParameter.h  ParameterValue.h  XDEAlgorithm.cc  XDEAlgorithm.h
ded-cpp/xde/base/: AlgorithmResult.cc  AlgorithmResult.h  CBIMDefinitions.h  CMakeLists.txt  MemoryBank.cc  MemoryBank.h  StopThread.h  ThreadInterface.cc  ThreadInterface.h  XDEBase.cc  XDEBase.h  XDEBlas.h  XDECSVFile.cc  XDECSVFile.h  XDEException.h  XDEMessage.cc  XDEMessage.h  XDEProgrammingException.h  XDEUtil.cc  XDEUtil.h
ded-cpp/xde/estimator/: CMakeLists.txt  EstimatorFactory.h  SolverBasedEstimator.cc  SolverBasedEstimator.h  XDEEstimator.cc  XDEEstimator.h
ded-cpp/xde/expressions/: DelayedVariable.cc  DelayedVariable.h  ExpressionHandler.cc  ExpressionHandler.h  ExpressionSetEvaluator.cc  ExpressionSetEvaluator.h  MemoryBankSynchronizer.cc  MemoryBankSynchronizer.h  MemorySynchronizer.cc  MemorySynchronizer.h  MuParserExpressionEvaluator.cc  MuParserExpressionEvaluator.h  MuParserExpressionHandler.cc  MuParserExpressionHandler.h  MuParserObjectsList.h  TimeVaryingFunctionHandler.cc  TimeVaryingFunctionHandler.h
ded-cpp/xde/extra_parser_functions/: BoostSpline.cc  BoostSpline.h  DerivableSpline.h  DerivableSplineFactory.h  FortranSmoothingBSpline.cc  FortranSmoothingBSpline.h  GenericFunctionList.h  LOCF.cc  LOCF.h  MfcatsSpline.cc  MfcatsSpline.h  NoFunction.h  TVFunctionException.h  TVFunctionMapping.cc  TVFunctionMapping.h  TimeVaryingFunction.cc  TimeVaryingFunction.h  TimeVaryingFunctionFactory.h  TimeVaryingFunctionList.h
ded-cpp/xde/mapping/: DataTableMapping.cc  DataTableMapping.h  MappingFormula.cc  MappingFormula.h  MappingInfoSet.cc  MappingInfoSet.h  ModelMappingInfoSet.cc  ModelMappingInfoSet.h  NewWorkingData.cc  NewWorkingData.h  ParsingResults.cc  ParsingResults.h
ded-cpp/xde/model/: XDEModel.cc  XDEModel.h
ded-cpp/xde/objectfunction/: DataGenerator.cc  DataGenerator.h  LeastSquare.cc  LeastSquare.h  ObjectiveFunctionFactory.h  ParameterMapping.cc  ParameterMapping.h  SolvingDataGenerator.cc  SolvingDataGenerator.h  XDEObjectiveFunction.cc  XDEObjectiveFunction.h
ded-cpp/xde/optimizer/: AdrianDE.cc  AdrianDE.h  CMakeLists.txt  DifferentialEvolution.cc  DifferentialEvolution.h  OptimizationResults.h  OptimizerFactory.h  TrustRegion.cc  TrustRegion.h  XDEOptimizer.cc  XDEOptimizer.h
ded-cpp/xde/parameters/: EstimationParameterSet.h  EstimationSymbolAttributes.cc  EstimationSymbolAttributes.h  ParameterRangeException.cc  ParameterRangeException.h  ParameterSet.h  SymbolAttributes.h
ded-cpp/xde/parser/: Covariate.cc  Covariate.h  DelayedVariablesHandler.h  DependentVariable.cc  DependentVariable.h  HistoryInterval.cc  HistoryInterval.h  HistoryIntervals.h  IntermediateSymbol.cc  IntermediateSymbol.h  Macro.cc  Macro.h  ModelParameter.cc  ModelParameter.h  ModelSymbol.cc  ModelSymbol.h  ParseTree.cc  ParseTree.h  ParseTreeComponents.cc  ParseTreeComponents.h  ParserException.h  ProcessedModelExpression.cc  ProcessedModelExpression.h  SpiritParser.cc  SpiritParser.h  XDEParser.cc  XDEParser.h
ded-cpp/xde/solver/: CMakeLists.txt  DDEWrapper.cc  DDEWrapper.h  ODEWrapper.cc  ODEWrapper.h  SambineDDEWrapper.cc  SambineDDEWrapper.h  SandineDDEStruct.h  SimulationSymbolAttributes.cc  SimulationSymbolAttributes.h  SolverFactory.h  SolverResult.cc  SolverResult.h  SundialsSolverWrapper.cc  SundialsSolverWrapper.h  XDESolverWrapper.cc  XDESolverWrapper.h
ded-cpp/xde/statistics/: CIFactory.h  ConfidenceIntervalResult.h  EstimatorResult.cc  EstimatorResult.h  MathUtil.cc  MathUtil.h  NLSSummary.cc  NLSSummary.h  XDEConfidenceInterval.cc  XDEConfidenceInterval.h  nls_summary.cc  nls_summary.h
ded-jni/src/main/cpp/: CMakeLists.txt
(+262 files in other folders)
